k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reliability-lab
  labels:
    app.kubernetes.io/name: reliability-lab
    app.kubernetes.io/part-of: kubernetes-reliability-lab
    app.kubernetes.io/managed-by: kubectl
    environment: local
