k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reliability-app
  namespace: reliability-lab
  labels:
    app.kubernetes.io/name: reliability-app
    app.kubernetes.io/part-of: kubernetes-reliability-lab
    app.kubernetes.io/component: api
    app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: reliability-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
