k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: reliability-app-ingress-policy
  namespace: reliability-lab
  labels:
    app.kubernetes.io/name: reliability-app
    app.kubernetes.io/part-of: kubernetes-reliability-lab
    app.kubernetes.io/component: network-security
    app.kubernetes.io/managed-by: kubectl
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: reliability-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: allowed
      ports:
        - protocol: TCP
          port: 8000
